apps/redis-platform/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-platform
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    app.kubernetes.io/part-of: redis-platform
